Fix directions buttons on small screens. Closes #814

--- a/less/app.less
+++ b/less/app.less
@@ -1183,6 +1183,12 @@ section#the-goods { margin-top: 44px; }
                 overflow: hidden;
             }
             #directions-link + a { margin-left: 10px; }
+
+            @media @screen-tiny {
+                .btn.btn-blue {
+                    padding: 0 10px;
+                }
+            }
         }
 
         @media @screen-tiny-above {
